--- a/Source/Languages/English.json
+++ b/Source/Languages/English.json
@@ -1,6 +1,6 @@
 ﻿{
   "ContainerEmpty": "empty",
   "ContainerOneItem": "1 item (not full)",
-  "ContainerFull": "completely full",
+  "ContainerFull": "full",
   "ContainerNonempty": "{0} items (not full)"
 }
